--- a/src/app/widgets/enregistrement/styles.css
+++ b/src/app/widgets/enregistrement/styles.css
@@ -1769,7 +1769,7 @@ input[type="date"].is-empty::-webkit-datetime-edit-year-field{
 }
 .croise-scroll-top > div { height: 1px; }
 .croise-wrap {
-  overflow-x: auto;
+  overflow-x: scroll;
   margin-bottom: 2rem;
   border-radius: 0 0 8px 8px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
